<resources>
    <string name="app_name">ZPI</string>
    <string name="register"><u>Zarejestruj się!</u></string>
    <string name="forgottenPass"><u>Zapomniałeś hasła?</u></string>
    <string name="createAcc">Utwórz konto</string>
    <string name="gotoLog">Przejdź do logowania</string>
    <string name="back">Powrót</string>
    <string name="logout">Wyloguj się</string>
    <string name="deleteAcc"><u>Usuń konto</u></string>
    <string name="new_name">Nowe imię</string>
    <string name="change_name">Zmień imię</string>
    <string name="change_surname">Zmień nazwisko</string>
    <string name="new_surname">Nowe nazwisko</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_todo">Do zrobienia</string>
    <string name="title_list_numbers">Plan</string>
    <string name="title_to_take_things">Produkty</string>
    <string name="title_map">Mapa</string>
    <string name="title_finance">Rozliczenia</string>
    <string name="logo">FastTravel</string>
    <string name="password_change">Twoje hasło zostało pomyślnie zmienione.</string>
    <string name="register_success">Rejestracja przebiegła pomyślnie. Możesz teraz zalogować się na swoje konto.</string>
    <string name="more"><u>więcej</u></string>
    <string name="delete"><u>usuń</u></string>
    <string name="success"><b>Sukces</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--GOOGLE KEY-->
    <string name="google_maps_api_key">AIzaSyAx41htAO8b4ikTCZL-v2BMKRzBaD-oHOE</string>
    <string name="delete_comment"><u>usuń komentarz</u></string>
    <string name="chat">Chat</string>
    <string name="trip_list_background">trip list background</string>
    <string name="punkt_wycieczki">punkt wycieczki</string>
    <string name="zdjecia_z_bramy_brandenburskiej">Zdjęcia z Bramy Brandenburskiej</string>
    <string name="wycieczka_do_berlina">Wycieczka do Berlina</string>
    <string name="ile_odpowiedzi">1 odpowiedź</string>
    <string name="tu_wpisz_swoja_odpowiedz">Tu wpisz swoją odpowiedź</string>
</resources>